src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLCapabilities_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLCapabilities_StringErrorContext.class */
public final class GLCapabilities_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("initialize()V", "net/labymod/core/laby3d/opengl/error/generated/GLCapabilitiesErrorContext");
        return methods;
    }
}
